# ptp

./: .gitignore  HaskellTests.hs  README.md  TestRunner.hs  cabal.project  hie.yaml  prolog_tests.pl  ptp.cabal  test_runner.pl
SectionIA/: Task27Report.hs.md  Task27Solution.hs  Task27Test.hs  task27_report.pl.md  task27_solution.pl  task27_test.pl
SectionIB/: Task65Report.hs.md  Task65Solution.hs  Task65Test.hs  task65_report.pl.md  task65_test.pl
SectionII/: Task2Report.hs.md  Task2Solution.hs  Task2Test.hs  task2_report.pl.md  task2_test.pl
SectionIII/: Task11Report.hs.md  Task11Solution.hs  Task11Test.hs
SectionIV/: Task7Report.hs.md  Task7Solution.hs  Task7Test.hs
ptp-haskell/: README.md  hie.yaml  ptp-haskell.cabal
ptp-haskell/app/: Main.hs
ptp-haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
ptp-haskell/dist-newstyle/packagedb/ghc-9.6.7/: package.cache  ptp-haskell-0.1.0.0-inplace.conf
ptp-haskell/report/SectionIA/: task27-report.md
ptp-haskell/report/SectionIB/: task65-report.md
ptp-haskell/report/SectionII/: task2-report.md
ptp-haskell/report/SectionIII/: task11-report.md
ptp-haskell/report/SectionIV/: task7-report.md
ptp-haskell/src/: Tasks.hs
ptp-haskell/src/SectionIA/: Task27.hs
ptp-haskell/src/SectionIB/: Task65.hs
ptp-haskell/src/SectionII/: Task2.hs
ptp-haskell/src/SectionIII/: Task11.hs
ptp-haskell/src/SectionIV/: Task7.hs
ptp-haskell/test/SectionIA/: Task27Tests.hs
ptp-haskell/test/SectionIB/: Task65Tests.hs
ptp-haskell/test/SectionII/: Task2Tests.hs
ptp-haskell/test/SectionIII/: Task11Tests.hs
ptp-haskell/test/SectionIV/: Task7Tests.hs
ptp-haskell/test/runner/: Main.hs  TestRunner.hs
ptp-prolog/: README.md
ptp-prolog/examples/: demo.pl
ptp-prolog/report/SectionIA/: task27-report.md
ptp-prolog/report/SectionIB/: task65-report.md
ptp-prolog/report/SectionII/: task2-report.md
ptp-prolog/src/: tasks.pl
ptp-prolog/src/SectionIB/: task65.pl
ptp-prolog/src/SectionII/: task2.pl
ptp-prolog/test/SectionIA/: task27_tests.pl
ptp-prolog/test/SectionIB/: task65_tests.pl
ptp-prolog/test/SectionII/: task2_tests.pl
ptp-prolog/test/runner/: main.pl  test_runner.pl
