name:                ptp
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    .
  exposed-modules:   SectionIA.Task27Solution, SectionIB.Task65Solution, SectionII.Task2Solution, SectionIII.Task11Solution, SectionIV.Task7Solution
  default-language:  Haskell2010
  build-depends:     base >=4.19 && <5,
                     containers

test-suite all-tests
  type:              exitcode-stdio-1.0
  main-is:           HaskellTests.hs
  hs-source-dirs:    .
  other-modules:     TestRunner, SectionIA.Task27Solution, SectionIA.Task27Test, SectionIB.Task65Solution, SectionIB.Task65Test, SectionII.Task2Solution, SectionII.Task2Test, SectionIII.Task11Solution, SectionIII.Task11Test, SectionIV.Task7Solution, SectionIV.Task7Test
  default-language:  Haskell2010
  build-depends:     base >=4.19 && <5,
                     containers

test-suite section-ia-task27-tests
  type:              exitcode-stdio-1.0
  main-is:           HaskellTests.hs
  hs-source-dirs:    .
  other-modules:     TestRunner, SectionIA.Task27Solution, SectionIA.Task27Test, SectionIB.Task65Solution, SectionIB.Task65Test, SectionII.Task2Solution, SectionII.Task2Test, SectionIII.Task11Solution, SectionIII.Task11Test, SectionIV.Task7Solution, SectionIV.Task7Test
  default-language:  Haskell2010
  build-depends:     base >=4.19 && <5,
                     containers

test-suite section-ib-task65-tests
  type:              exitcode-stdio-1.0
  main-is:           HaskellTests.hs
  hs-source-dirs:    .
  other-modules:     TestRunner, SectionIA.Task27Solution, SectionIA.Task27Test, SectionIB.Task65Solution, SectionIB.Task65Test, SectionII.Task2Solution, SectionII.Task2Test, SectionIII.Task11Solution, SectionIII.Task11Test, SectionIV.Task7Solution, SectionIV.Task7Test
  default-language:  Haskell2010
  build-depends:     base >=4.19 && <5,
                     containers

test-suite section-ii-task2-tests
  type:              exitcode-stdio-1.0
  main-is:           HaskellTests.hs
  hs-source-dirs:    .
  other-modules:     TestRunner, SectionIA.Task27Solution, SectionIA.Task27Test, SectionIB.Task65Solution, SectionIB.Task65Test, SectionII.Task2Solution, SectionII.Task2Test, SectionIII.Task11Solution, SectionIII.Task11Test, SectionIV.Task7Solution, SectionIV.Task7Test
  default-language:  Haskell2010
  build-depends:     base >=4.19 && <5,
                     containers

test-suite section-iii-task11-tests
  type:              exitcode-stdio-1.0
  main-is:           HaskellTests.hs
  hs-source-dirs:    .
  other-modules:     TestRunner, SectionIA.Task27Solution, SectionIA.Task27Test, SectionIB.Task65Solution, SectionIB.Task65Test, SectionII.Task2Solution, SectionII.Task2Test, SectionIII.Task11Solution, SectionIII.Task11Test, SectionIV.Task7Solution, SectionIV.Task7Test
  default-language:  Haskell2010
  build-depends:     base >=4.19 && <5,
                     containers

test-suite section-iv-task7-tests
  type:              exitcode-stdio-1.0
  main-is:           HaskellTests.hs
  hs-source-dirs:    .
  other-modules:     TestRunner, SectionIA.Task27Solution, SectionIA.Task27Test, SectionIB.Task65Solution, SectionIB.Task65Test, SectionII.Task2Solution, SectionII.Task2Test, SectionIII.Task11Solution, SectionIII.Task11Test, SectionIV.Task7Solution, SectionIV.Task7Test
  default-language:  Haskell2010
  build-depends:     base >=4.19 && <5,
                     containers
