name:                ptp-haskell
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  exposed-modules:   Tasks, SectionIA.Task27, SectionIB.Task65, SectionII.Task2
  default-language:  Haskell2010
  build-depends:     base >=4.18 && <5

executable ptp-haskell
  main-is:           Main.hs
  hs-source-dirs:    app
  default-language:  Haskell2010
  build-depends:     base >=4.18 && <5,
                     ptp-haskell

test-suite all-tests
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    test/runner, test
  other-modules:     TestRunner, SectionIA.Task27Tests, SectionIB.Task65Tests, SectionII.Task2Tests
  default-language:  Haskell2010
  build-depends:     base >=4.18 && <5,
                     ptp-haskell

test-suite section-ia-task27-tests
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    test/runner, test
  other-modules:     TestRunner, SectionIA.Task27Tests, SectionIB.Task65Tests, SectionII.Task2Tests
  default-language:  Haskell2010
  build-depends:     base >=4.18 && <5,
                     ptp-haskell

test-suite section-ib-task65-tests
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    test/runner, test
  other-modules:     TestRunner, SectionIA.Task27Tests, SectionIB.Task65Tests, SectionII.Task2Tests
  default-language:  Haskell2010
  build-depends:     base >=4.18 && <5,
                     ptp-haskell

test-suite section-ii-task2-tests
  type:              exitcode-stdio-1.0
  main-is:           Main.hs
  hs-source-dirs:    test/runner, test
  other-modules:     TestRunner, SectionIA.Task27Tests, SectionIB.Task65Tests, SectionII.Task2Tests
  default-language:  Haskell2010
  build-depends:     base >=4.18 && <5,
                     ptp-haskell
